--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,3 +35,5 @@ jobs:
       - name: Run a one-line script
         run: python --version
 
+      - name: Run a one-line script
+        run: pip --version
