--- a/ansible/roles/ctags/tasks/main.yml
+++ b/ansible/roles/ctags/tasks/main.yml
@@ -18,3 +18,8 @@
    - ansible_distribution_major_version == "18"
    - ctags_exists is failed
 
+- include: ubuntu20.yml
+  when:
+    - ansible_distribution == "Ubuntu"
+    - ansible_distribution_major_version == "20"
+    - ctags_exists is failed
