--- a/ansible/roles/docker/tasks/main.yml
+++ b/ansible/roles/docker/tasks/main.yml
@@ -10,4 +10,7 @@
    - ansible_distribution == "Ubuntu"
    - ansible_distribution_major_version == "18"
 
-
+- include: ubuntu20.yml
+  when:
+    - ansible_distribution == "Ubuntu"
+    - ansible_distribution_major_version == "20"
