--- a/ansible/roles/git/tasks/main.yml
+++ b/ansible/roles/git/tasks/main.yml
@@ -14,3 +14,8 @@
   when:
    - ansible_distribution == "Ubuntu"
    - ansible_distribution_major_version == "18"
+
+- include: ubuntu20.yml
+  when:
+    - ansible_distribution == "Ubuntu"
+    - ansible_distribution_major_version == "20"
