--- a/ansible/roles/glances/tasks/main.yml
+++ b/ansible/roles/glances/tasks/main.yml
@@ -10,3 +10,8 @@
   when:
    - ansible_distribution == "Ubuntu"
    - ansible_distribution_major_version == "18"
+
+- include: ubuntu20.yml
+  when:
+    - ansible_distribution == "Ubuntu"
+    - ansible_distribution_major_version == "20"
