--- a/ansible/roles/nvim/tasks/main.yml
+++ b/ansible/roles/nvim/tasks/main.yml
@@ -23,6 +23,12 @@
    - ansible_distribution == "Ubuntu"
    - ansible_distribution_major_version == "18"
 
+- include: ubuntu20.yml
+  when:
+    - nvim_exists is failed
+    - ansible_distribution == "Ubuntu"
+    - ansible_distribution_major_version == "20"
+
 
 - name: nvim install when not installed
   command: bash -lc "mkdir -p ~/.config/nvim && touch ~/.config/nvim/init.vim && echo 'source ~/.vimrc' > ~/.config/nvim/init.vim"
