--- a/ansible/roles/rbenv/tasks/main.yml
+++ b/ansible/roles/rbenv/tasks/main.yml
@@ -20,6 +20,12 @@
    - ansible_distribution == "Ubuntu"
    - ansible_distribution_major_version == "18"
 
+- include: ubuntu20.yml
+  when:
+    - rbenv_exists is failed
+    - ansible_distribution == "Ubuntu"
+    - ansible_distribution_major_version == "20"
+
 # OS branch wnd
 - name: rubyenv install when not installed
   git:
