--- a/ansible/roles/example/tasks/main.yml
+++ b/ansible/roles/example/tasks/main.yml
@@ -9,3 +9,9 @@
 #  with_items:
 #    - "{{ virtualhosts }}"
 
+- name: deug
+  debug:
+    msg: "{{ ansible_distribution }}"
+- name: deug
+  debug:
+    msg: "{{ ansible_distribution_major_version }}"
