--- a/.actrc
+++ b/.actrc
@@ -1,2 +1,3 @@
 -P ubuntu-1804=nektos/act-environments-ubuntu:18.04
+-P ubuntu-latest=nektos/act-environments-ubuntu:18.04
 -P ubuntu-2004=ubuntu:20.04
