--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -114,6 +114,9 @@
     - role: awscli
       tags:
         - awscli
+    - role: tfenv
+      tags:
+        - tfenv
     - role: mycli
       tags:
         - mycli
